--- a/browser-app/package.json
+++ b/browser-app/package.json
@@ -24,8 +24,8 @@
   },
   "theiaPluginsDir": "plugins",
   "theiaPlugins": {
-    "vscode-dart": "https://github.com/Dart-Code/Dart-Code/releases/download/v3.60.0/dart-code-3.60.0.vsix",
-    "vscode-flutter": "https://github.com/Dart-Code/Flutter/releases/download/v3.60.0/flutter-3.60.0.vsix"
+    "Dart-Code.dart-code": "https://github.com/Dart-Code/Dart-Code/releases/download/v3.63.20230504/dart-code-3.63.20230504.vsix",
+    "Dart-Code.flutter": "https://github.com/Dart-Code/Flutter/releases/download/v3.62.0/flutter-3.62.0.vsix"
   },
   "scripts": {
     "prepare": "theia build --mode development",
